--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tov-ui",
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -11,7 +11,9 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@mistjs/eslint-config": "^1.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "eslint": "^8.53.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
