--- a/packages/tov-ui/package.json
+++ b/packages/tov-ui/package.json
@@ -1,9 +1,10 @@
 {
   "version": "1.0.0",
   "description": "",
-  "scripts": {
-  },
-  "keywords": [],
+
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [],
+  "scripts": {
+  }
 }
