--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "scripts": {
+    "prepare": "husky install",
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
@@ -14,6 +15,7 @@
     "@mistjs/eslint-config": "^1.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.53.0",
+    "husky": "^8.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
