--- a/packages/tov-ui/tsconfig.json
+++ b/packages/tov-ui/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "extends":["../../tsconfig.json"],
+  "extends": ["../../tsconfig.json"],
   "compilerOptions": {
 
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
