--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "prepare": "husky install",
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   },
   "dependencies": {
     "vue": "^3.3.4"
@@ -19,9 +22,12 @@
     "lint-staged": "^15.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vitepress": "1.0.0-rc.25",
     "vue-tsc": "^1.8.5"
   },
   "lint-staged": {
-    "./**/*.{ts,json,vue,md,jsx,tsx,js,css,less}": ["eslint --fix"]
+    "./**/*.{ts,json,vue,md,jsx,tsx,js,css,less}": [
+      "eslint --fix"
+    ]
   }
 }
