--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "devDependencies": {
     "@mistjs/eslint-config": "^1.0.0",
+    "@types/node": "^20.9.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.53.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-vitepress-demo": "^2.1.0",
     "vitepress": "1.0.0-rc.25",
     "vue-tsc": "^1.8.5"
   },
