--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.54.0",
     "esno": "^4.0.0",
     "husky": "^8.0.3",
+    "less": "^4.2.0",
     "lint-staged": "^15.1.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
