--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mistjs/eslint-config": "^1.0.0",
     "@types/node": "^20.9.2",
     "@vitejs/plugin-vue": "^4.5.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "eslint": "^8.54.0",
     "esno": "^4.0.0",
     "husky": "^8.0.3",
