feat: add icons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "moduleResolution": "bundler",
     "paths": {
       "@tov-ui/utils": ["packages/utils/src"],
+      "@tov-ui/icons": ["packages/icons/src"],
       "tov-ui": ["packages/tov-ui/src"],
       "tov-ui/*": ["packages/tov-ui/src/*"]
     },
