feat: add vitest

--- a/packages/icons/tsconfig.json
+++ b/packages/icons/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": ["../../tsconfig.json"],
-  "include": ["./src/**/*.vue", "./src/**/*.ts"]
+  "include": ["./src/**/*.vue", "./src/**/*.ts", "./docs/**/*.vue", "./docs/**/*.ts"]
 }
