--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       "tov-ui/*": ["packages/tov-ui/src/*"]
     },
     "resolveJsonModule": true,
+    "types": ["vitest/globals"],
     "allowImportingTsExtensions": true,
 
     /* Linting */
