--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "test": "vitest",
+    "coverage": "vitest --coverage"
   },
   "dependencies": {
     "vue": "^3.3.8"
@@ -20,9 +22,12 @@
     "@types/node": "^20.9.2",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vitest/coverage-v8": "^1.0.1",
+    "@vue/test-utils": "^2.4.3",
     "eslint": "^8.54.0",
     "esno": "^4.0.0",
     "husky": "^8.0.3",
+    "jsdom": "^23.0.1",
     "less": "^4.2.0",
     "lint-staged": "^15.1.0",
     "postcss": "^8.4.31",
@@ -31,6 +36,7 @@
     "vite-plugin-tsx-auto-props": "^0.0.6",
     "vite-plugin-vitepress-demo": "^2.2.1",
     "vitepress": "1.0.0-rc.29",
+    "vitest": "^1.0.1",
     "vue-tsc": "^1.8.22"
   },
   "lint-staged": {
