feat: add icons build

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -14,5 +14,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "build": "vite build",
+    "build:bundle": "vite build --config vite.bundle.config.ts"
   }
 }
