--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lint-staged": "^15.1.0",
     "postcss": "^8.4.31",
     "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0",
     "vite-plugin-dts": "^3.6.4",
     "vite-plugin-tsx-auto-props": "^0.0.7",
