--- a/packages/tov-ui/package.json
+++ b/packages/tov-ui/package.json
@@ -6,7 +6,9 @@
   "license": "ISC",
   "keywords": [],
   "scripts": {
-    "build": "vite build"
+    "build": "vite build",
+    "build:umd": "vite build --config vite.umd.config.ts",
+    "build:style": "vite build --config vite.style.config.ts"
   },
   "dependencies": {
     "@floating-ui/vue": "^1.0.2",
