--- a/tsconfig.vitepress.json
+++ b/tsconfig.vitepress.json
@@ -1,4 +1,4 @@
 {
   "extends": ["./tsconfig.json"],
-  "include": [".vitepress/**/*.ts", ".vitepress/**/*.tsx", ".vitepress/**/*.vue"]
+  "include": [".vitepress/**/*.ts", ".vitepress/**/*.tsx", ".vitepress/**/*.vue", "components.d.ts", "packages/**/docs/**/*.vue", "packages/**/demos/*.vue"]
 }
