--- a/packages/tov-ui/package.json
+++ b/packages/tov-ui/package.json
@@ -1,10 +1,32 @@
 {
   "name": "tov-ui",
-  "version": "0.0.0",
-  "description": "",
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
+  "version": "0.0.1",
+  "description": "this is a vue3 ui library",
+  "author": "aibayanyu20 <aibayanyu@qq.com>",
+  "license": "MIT",
+  "keywords": [
+    "vue",
+    "vue3",
+    "components"
+  ],
+  "exports": {
+    ".": {
+      "types": "./es/index.d.ts",
+      "import": "./es/index.js",
+      "require": "./lib/index.js"
+    },
+    "./es/*": "./es/*",
+    "./dist/*": "./dist/*",
+    "./lib/*": "./lib/*",
+    "./package.json": "./package.json"
+  },
+  "main": "es/index.js",
+  "types": "es/index.d.ts",
+  "files": [
+    "dist",
+    "es",
+    "lib"
+  ],
   "scripts": {
     "build": "vite build",
     "build:umd": "vite build --config vite.umd.config.ts",
