--- a/package.json
+++ b/package.json
@@ -15,36 +15,37 @@
     "tov-ui:css": "esno ./scripts/style-bundle.ts"
   },
   "dependencies": {
-    "vue": "^3.3.8"
+    "vue": "^3.3.11"
   },
   "devDependencies": {
     "@ant-design/colors": "^7.0.0",
     "@mistjs/eslint-config": "^1.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/less": "^3.0.6",
-    "@types/node": "^20.9.2",
-    "@vitejs/plugin-vue": "^4.5.0",
+    "@types/node": "^20.10.4",
+    "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vitest/coverage-v8": "^1.0.1",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vue/test-utils": "^2.4.3",
-    "eslint": "^8.54.0",
+    "eslint": "^8.55.0",
     "esno": "^4.0.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "husky": "^8.0.3",
     "jsdom": "^23.0.1",
     "less": "^4.2.0",
-    "lint-staged": "^15.1.0",
-    "postcss": "^8.4.31",
-    "typescript": "^5.2.2",
+    "lint-staged": "^15.2.0",
+    "postcss": "^8.4.32",
+    "typescript": "^5.3.3",
+    "unbuild": "^2.0.0",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.0.0",
+    "vite": "^5.0.7",
     "vite-plugin-dts": "^3.6.4",
     "vite-plugin-tsx-auto-props": "^0.0.7",
     "vite-plugin-vitepress-demo": "^2.2.1",
     "vitepress": "1.0.0-rc.29",
-    "vitest": "^1.0.1",
-    "vue-tsc": "^1.8.22"
+    "vitest": "^1.0.4",
+    "vue-tsc": "^1.8.25"
   },
   "lint-staged": {
     "./**/*.{ts,json,vue,md,jsx,tsx,js,css,less}": [
