--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,8 +1,29 @@
 {
   "name": "@tov-ui/utils",
+  "type": "module",
   "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    },
+    "./package.json": "./package.json"
+  },
+  "main": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "unbuild"
+  },
   "dependencies": {
-    "classnames": "^2.3.2"
+    "classnames": "^2.3.2",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1"
