chore: release icons@v0.0.2

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -28,5 +28,8 @@
   "scripts": {
     "build": "vite build",
     "build:bundle": "vite build --config vite.bundle.config.ts"
+  },
+  "dependencies": {
+    "vue": "^3.0.0"
   }
 }
