--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
+    "docs:vercel": "cross-env BUILD_VERCEL=true vitepress build",
     "docs:preview": "vitepress preview",
     "test": "vitest",
     "coverage": "vitest --coverage",
@@ -27,6 +28,7 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vue/test-utils": "^2.4.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.55.0",
     "esno": "^4.0.0",
     "fast-glob": "^3.3.2",
